fixed paint splatter overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
-body,
-html,
-#root,
+#root {
+  position: relative;
+}
+
 #paint-on {
   height: 100%;
   width: 100%;
-  margin: 0;
-  cursor: none;
+  position: absolute;
+  overflow: hidden;
+  pointer-events: none;
 }
 
 .App {
